# research-assistant

./: .claudeignore  .gitignore  AGENTS.md  ARCHITECTURE.md  IDENTITY.md  README.md  README_latex_extraction.md  SOUL.md  SPEC.md  TOOLS.md  USER.md  process_rest.py  setup.sh  uninstall.sh
.claude/: CLAUDE.md  settings.json
.claude/commands/: lint.md  run-pipeline.md
pipeline/: Makefile  pyproject.toml
pipeline/src/arxiv_digest/: __init__.py  __main__.py  config.py  deliver.py  deliver_email.py  digest.py  digest_html.py  download.py  extract_latex.py  feedback.py  fetch.py  onboard.py  prefilter.py  prompt_utils.py  reviewer.py  scorer.py  utils.py
pipeline/src/arxiv_digest/llm/: __init__.py  base.py  claude.py  gemini.py
pipeline/tests/: conftest.py  test_config.py  test_deliver.py  test_deliver_email.py  test_digest.py  test_digest_html.py  test_download.py  test_extract_latex.py  test_feedback.py  test_onboard.py  test_prefilter.py  test_scorer.py
scripts/: deliver_digest_markdown.py  digest_deliver.sh  download_full_papers.py  download_full_papers2.py  download_papers.sh  fetch_papers.py  fetch_prefilter.sh  make_digest_markdown.py  prefilter_papers.py  process_deliver.sh  review_papers.py  review_papers.sh  run_pipeline.sh  score_papers.py  score_papers.sh
skills/preference-updater/: SKILL.md
skills/preference-updater/scripts/: update_preferences.py
skills/preference-wizard/: SKILL.md
skills/preference-wizard/scripts/: save_preferences.py
skills/score-papers/: SKILL.md
skills/score-papers/references/: scoring_algorithm.md
